@@ -1,0 +1,24 @@
+Windowless
+----------
+
+  This is another "Hello World" example program.  This version demonstrates
+  Woopsi's capabilities of working with windowless user interfaces.
+  
+  Although Woopsi supports the windowing paradigm, there is no need to follow
+  that convention.  Gadgets can be added directly to a Screen gadget without
+  first being added to an intermediary Window.  This allows greater flexibility.
+  
+  By omitting windows, Woopsi can be used to create more than just desktop-style
+  interfaces.  Some example include:
+
+   - Menu systems;
+   - UIs without windows;
+   - Bitmap-heavy interfaces that disguise Woopsi entirely.
+
+
+Building the Example
+--------------------
+
+  To build this example, open a shell, navigate to this directory, and type
+  "make".  Note that this will also compile the Woopsi source; this will be
+  necessary until Woopsi ships as a library.
