@@ -1,0 +1,9 @@
+// Includes
+#include "windowless.h"
+
+int main(int argc, char* argv[]) {
+
+	// Create the Windowless application
+	Windowless app;
+	return app.main(argc, argv);
+}
